--- a/media/media.css
+++ b/media/media.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     padding: 0;
     color: #333;
+    background-color: #F4F6F5;
 }
 
 header {
@@ -28,10 +29,17 @@ nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    width: 100%;
 }
 
 nav ul li {
     margin-left: 30px;
+    flex-grow: 1;
+}
+
+nav ul li {
+    margin-left: auto;
+    flex-grow: 0;
 }
 
 nav ul li a {
@@ -43,6 +51,16 @@ nav ul li a {
 .cart-icon {
     width: 24px;
     height: auto;
+    display: block;
+    text-align: center;
+}
+
+.cart-icon {
+    width: 100%;
+    max-width: 40px;
+    height: auto;
+    display: block;
+    margin: 0 auto;
 }
 
 .content {
@@ -93,6 +111,132 @@ p {
     color: white;
 }
 
+h1 {
+    text-align: left;
+    margin-left: 20px;
+}
+
+.filters {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+
+.filters-title {
+    margin: 0;
+}
+
+.filters button {
+    display: flexbox;
+    gap: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin-right: 10px;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.filter-buttons button {
+    background-color: #D4E8D9;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.filter-buttons button:hover {
+    background-color: #376B44;
+}
+
+.book-row {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 5px;
+}
+
+.book {
+    background-color: #E1EDE6;
+    padding: 8px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    margin-bottom: 10px;
+    border-radius: 5px;
+    width: 25%;
+    text-align: center;
+}
+
+.book img {
+    width: 310px;
+    height: 422px;
+    padding: 10px;
+    margin: 20px;
+    border-radius: 5px;
+}
+
+.author {
+    color: gray;
+    font-size: 14px;
+    font-family: Raleway;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 21.13px;
+    text-align: left;
+}
+
+.title {
+    font-weight: bold;
+    margin: 5px 0;
+    font-family: Raleway;
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 35.22px;
+    text-align: left;
+}
+
+.description {
+    font-size: 14px;
+    margin: 5px 0;
+    font-family: Raleway;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 21.13px;
+    text-align: left;
+}
+
+.price {
+    font-weight: bold;
+    margin: 10px 0;
+    color: #598D66;
+    font-family: Raleway;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 28.18px;
+    text-align: left;
+}
+
+.add-to-cart {
+    font-family: Raleway;
+    font-size: 20px;
+    line-height: 23.48px;
+    width: 100%;
+    padding: 10px;
+    border: 3px solid #598D66;
+    border: none;
+    color: #598D66;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.add-to-cart:hover {
+    background-color: #e6f2e6;
+}
+
 @media (max-width: 767px) {
     header {
         flex-direction: column;
@@ -128,6 +272,9 @@ p {
         width: 100%;
         padding: 12px;
     }
+    .book {
+        width: 90%;
+    }
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
@@ -160,6 +307,10 @@ p {
         padding: 10px 25px;
         font-size: 16px;
     }
+    .book {
+        width: 45%;
+        /* Увеличена ширина для планшетов */
+    }
 }
 
 @media (min-width: 1025px) {
@@ -187,5 +338,9 @@ p {
     .product-button {
         padding: 10px 30px;
         font-size: 16px;
+    }
+    .book {
+        width: 30%;
+        /* Увеличена ширина для ПК */
     }
 }
